# bookforge

./: .gitignore  README.md  docker-compose.yml  vercel.json
backend/: .env.example  config.py  main.py  pyproject.toml
backend/bookforge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/db/: models.py  schema.sql  seed.py  session.py
backend/models/: activity.py  activity_write.py  book.py  chapter.py  chat.py  document.py  pipeline.py
backend/pipeline/: __init__.py  gates.py  orchestrator.py  stage_runner.py
backend/prompts/: discovery.py
backend/prompts/continuity/: ruth.py
backend/prompts/editing/: copy_edit.py  dev_edit.py  line_deai.py
backend/prompts/foundation/: antipattern.py  characters.py  dialogue.py  naming.py  sensory.py  story.py  voice.py  world.py
backend/prompts/review/: publisher.py
backend/prompts/writing/: chapter.py  summaries.py
backend/routes/: books.py  chat.py  documents.py  files.py  pipeline.py
backend/services/: assembly.py  llm.py  storage.py  token_counter.py
backend/workers/: __init__.py  jobs.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/book/[id]/: page.tsx  (+2 more)
frontend/app/dashboard/: actions.ts  page.tsx
frontend/components/chat/: ChatInterface.tsx  MessageBubble.tsx
frontend/components/dashboard/: CreateBookForm.tsx
frontend/components/discover/: FormWizard.tsx  QuestionField.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
shared/: constants.ts  types.ts
(+13 files in other folders)
