[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookforge-backend"
version = "0.1.0"
description = "FastAPI backend for BookForge."
requires-python = ">=3.12,<3.15"
dependencies = [
  "arq>=0.26.3",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.7"
]

[tool.setuptools]
py-modules = ["main", "config"]
